# Lumen_MCVR

./: CMakeLists.txt
src/common/: atmosphere_common.glsl  shared.hpp
src/core/: CMakeLists.txt  all_extern.hpp  glfw_bind.cpp
src/core/middleware/: com_radiance_client_option_Options.cpp  com_radiance_client_option_Options.h  com_radiance_client_pipeline_Pipeline.cpp  com_radiance_client_pipeline_Pipeline.h  com_radiance_client_proxy_vulkan_BufferProxy.cpp  com_radiance_client_proxy_vulkan_BufferProxy.h  com_radiance_client_proxy_vulkan_DrawCommandProxy_Overlay.h  com_radiance_client_proxy_vulkan_PipelineStateProxy_ClearState.h  com_radiance_client_proxy_vulkan_PipelineStateProxy_ColorBlendState.h  com_radiance_client_proxy_vulkan_PipelineStateProxy_DepthStencilState.h  com_radiance_client_proxy_vulkan_PipelineStateProxy_RasterizationState.h  com_radiance_client_proxy_vulkan_PipelineStateProxy_ViewportState.h  com_radiance_client_proxy_vulkan_RendererProxy.cpp  com_radiance_client_proxy_vulkan_RendererProxy.h  com_radiance_client_proxy_vulkan_TextureProxy.cpp  com_radiance_client_proxy_vulkan_TextureProxy.h  com_radiance_client_proxy_vulkan_WindowProxy.cpp  com_radiance_client_proxy_vulkan_WindowProxy.h  com_radiance_client_proxy_world_ChunkProxy.cpp  com_radiance_client_proxy_world_ChunkProxy.h  com_radiance_client_proxy_world_EntityProxy.cpp  com_radiance_client_proxy_world_EntityProxy.h  com_radiance_client_proxy_world_PlayerProxy.cpp  com_radiance_client_proxy_world_PlayerProxy.h
src/core/render/: buffers.cpp  buffers.cpp.bak  buffers.hpp  chunks.cpp  chunks.hpp  entities.cpp  omm_baker.cpp  omm_baker.hpp  omm_debug_stubs.cpp  render_framework.cpp  renderer.hpp  streamline_context.cpp  streamline_context.hpp  textures.cpp  textures.hpp  world.hpp
src/core/render/modules/world/post_render/: post_render_module.cpp
src/core/render/modules/world/ray_tracing/: ray_tracing_module.cpp  ray_tracing_module.hpp
src/core/render/modules/world/ray_tracing/submodules/: atmosphere.cpp  atmosphere.hpp  world_prepare.cpp  world_prepare.hpp
src/core/vulkan/: as.cpp  as.hpp  buffer.cpp  device.cpp  device.hpp  instance.cpp  pipeline.cpp  swapchain.cpp
src/shader/util/: clouds.glsl  disney.glsl  ray_payloads.glsl
src/shader/world/post_render/: world_post.frag  world_post_star.frag
src/shader/world/ray_tracing/: end_gateway.rchit  end_portal.rchit  shadow.rahit  shadow.rmiss  world.rgen  world.rmiss  world_cloud.rchit  world_no_reflect.rchit  world_solid_transparent.rchit  world_water_mask.rahit  world_water_mask.rchit
src/shader/world/ray_tracing/atmosphere/: atmosphere_light.comp  skycube.frag  skycube.vert  trans_lut.frag
src/shader/world/tone_mapping/: tone_mapping.frag
